# packnine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  installer.nsi  packnine.mac.spec  packnine.spec  pyproject.toml
.github/ISSUE_TEMPLATE/: backlog_phase2.md
.github/workflows/: ci.yml
conductor/tracks/track_20260708_packnine_archiver/: analysis.md  implementation.md  plan.md  review.md
conductor/tracks/track_20260714_bandizip_parity/: plan.md  (+1 more)
packnine/: main.py
packnine/application/: compress_service.py  context_menu_service.py  extract_service.py  inspect_service.py  smart_naming.py  update_service.py
packnine/domain/: entities.py  exceptions.py  interfaces.py  security_policy.py  value_objects.py
packnine/infrastructure/: context_menu.py  format_registry.py  motw.py  rar_adapter.py  sevenzip_adapter.py  singlefile_adapter.py  tar_adapter.py  zip_adapter.py
packnine/presentation/: cli.py
scripts/: generate_icon.py  register_context_menu.py
tests/: test_architecture_constraints.py
tests/application/: test_compress_service.py  test_extract_service.py  test_inspect_service.py  test_smart_naming.py  test_update_service.py
tests/domain/: test_entities.py  test_security_policy.py  test_value_objects.py
tests/infrastructure/: conftest.py  test_context_menu.py  test_format_registry.py  test_motw.py  test_rar_adapter.py  test_sevenzip_adapter.py  test_singlefile_adapter.py  test_tar_adapter.py  test_zip_adapter.py
tests/presentation/: test_cli.py  test_compress_dialog.py  test_image_viewer.py  test_main_window.py  test_quick_progress.py
(+10 files in other folders)
